--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
   <div class="container">
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl }}">{{ site.title }}<strong>{{ site.title2 }}</strong></a></h1>
     <ul class="navbar">
-      <li><a href="{{ '/Resume' | prepend: site.baseurl }}">Resume</a></li>
+      <li><a href="{{ '/resume' | prepend: site.baseurl }}">Resume</a></li>
       <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank">RSS</a></li>
     </ul>
   </div>
