--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -88,13 +88,6 @@ hr {
   .container {
     padding-bottom: 0;
   }
-
-  .helper {
-      #position: absolute;
-      #top: 50%;
-      display: table-cell;
-      vertical-align: middle;
-  }
 }
 
 .logo {
@@ -119,6 +112,7 @@ hr {
   float: right;
   margin: 0;
   position: relative;
+  bottom: 100%;
   padding: 0;
   pointer-events: all;
   cursor: pointer;
