--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -112,8 +112,7 @@ hr {
   float: right;
   margin: 0;
   position: relative;
-  bottom: 100%;
-  padding: 0;
+  bottom:0%
   pointer-events: all;
   cursor: pointer;
 
