[EDITED] font change.

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+//@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body {
   color: $base-font-color;
