--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -112,7 +112,7 @@ hr {
   float: right;
   margin: 0;
   position: relative;
-  bottom:-20%
+  bottom:-20%;
   pointer-events: all;
   cursor: pointer;
 
