--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Typography
-$base-font-family: 'Inconsolata', monospace;
+$base-font-family: 'Open Sans';
 $heading-font-family: $base-font-family;
 
 // Font Sizes
