[FIXED] video, nav bar.

--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -125,9 +125,8 @@ em {
 ul,
 ol,
 dl {
-    margin-top: 0;
     margin-left: 1.2em;
-    margin-bottom: 1rem;
+    margin-bottom: 50%;
     list-style-type: square;
     list-style-position: outside;
     list-style-image: none;
