--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -111,7 +111,6 @@ hr {
 .navbar {
   float: right;
   position: relative;
-  bottom:-600%;
   pointer-events: all;
   cursor: pointer;
 
@@ -251,8 +250,7 @@ hr {
   	left:0;
   	width:100%;
   	height:100%;
-    padding-top:30px;
-    padding-bottom:30px;
+    padding: 30px 0px 30px !important;
   }
 }
 
