--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -125,8 +125,9 @@ em {
 ul,
 ol,
 dl {
+    margin-top: 0;
     margin-left: 1.2em;
-    margin-bottom: 50%;
+    margin-bottom: 1rem;
     list-style-type: square;
     list-style-position: outside;
     list-style-image: none;
