[TRY] adding next/previous buttons to posts.

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -289,3 +289,20 @@ hr {
     }
   }
 }
+
+.PageNavigation {
+  font-size: 14px;
+  display: block;
+  width: auto;
+  overflow: hidden;
+}
+
+.PageNavigation a {
+  display: block;
+  float: left;
+  margin: 1em 0;
+}
+
+.PageNavigation .next {
+  float: right;
+}
