--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,14 +12,14 @@ layout: default
     {% include post-share.html %}
   </div>
 
-  <div class="page-navigation">
+  <aside class="page-navigation">
   {% if page.previous.url %}
     <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
   {% endif %}
   {% if page.next.url %}
     <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
   {% endif %}
-</div>
+</aside>
 </article>
 
 {% include comments.html %}
