--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -111,7 +111,7 @@ hr {
 .navbar {
   float: right;
   position: relative;
-  top: 50%;
+  bottom: 0%;
   transform: translateY(-50%);
   pointer-events: all;
   cursor: pointer;
