--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -94,13 +94,13 @@ hr {
   float: left;
   margin: 0 0 1em 0;
   cursor: pointer;
-  letter-spacing: 0.8px;
+  letter-spacing: -0.28px;
   font-size: 40px;
   line-height: 48px;
   font-weight: 300;
 
   span {
-    font-weight: 700;
+    font-weight: 500;
   }
 }
 
@@ -110,15 +110,14 @@ hr {
 
 .navbar {
   float: right;
-  position: relative;
   bottom: 0%;
-  transform: translateY(-50%);
+  transform: translateY(50%);
   pointer-events: all;
   cursor: pointer;
 
   li {
     display: inline-block;
-    padding: 0 .6em;
+    //padding: 0 .6em;
   }
 
   a {
@@ -247,12 +246,14 @@ hr {
   iframe,
   object,
   embed {
-    position:absolute;
+    /* position: relative; */
+    /* left: -75px; */
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
   	top:0;
   	left:0;
   	width:100%;
   	height:100%;
-    padding: 30px 0px 30px !important;
   }
 }
 
