--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,7 @@
   <div class="container">
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl }}">{{ site.title }}<strong>{{ site.title2 }}</strong></a></h1>
     <ul class="navbar">
+      <li><a href="{{ '/portfolio' | prepend: site.baseurl }}">Portfolio</a></li>
       <li><a href="{{ '/resume' | prepend: site.baseurl }}">Resume</a></li>
     </ul>
   </div>
