--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,8 +2,8 @@
   <div class="container">
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl }}">{{ site.title }}<strong>{{ site.title2 }}</strong></a></h1>
     <ul class="navbar">
-      <li><a href="{{ '/portfolio' | prepend: site.baseurl }}">Portfolio</a></li>
-      <li><a href="{{ '/resume' | prepend: site.baseurl }}">Resume</a></li>
+      <li style=" padding-left: 1em;padding-right: 1em;"><a href="{{ '/portfolio' | prepend: site.baseurl }}">Portfolio</a></li>
+      <li style=" padding-left: 1em;padding-right: 1em;"><a href="{{ '/resume' | prepend: site.baseurl }}">Resume</a></li>
     </ul>
   </div>
 </nav>
