[EDITED] added figure captions and better video embeds

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -49,3 +49,10 @@ $base-timing: ease;
 // Video embed wisth/height
 $video-width: "768";
 $video-height: "432";
+
+
+
+$small                      : 600px !default;
+$medium                     : 768px !default;
+$medium-wide                : 900px !default;
+$large                      : 1024px !default;
