--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -46,6 +46,8 @@ $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($action-color, $l
 $base-duration: 150ms;
 $base-timing: ease;
 
+$global-transition          : all 0.15s ease !default;
+
 // Video embed wisth/height
 $video-width: "768";
 $video-height: "432";
