--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -7,15 +7,15 @@
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
-  -webkit-animation-delay: 0.15s;
-          animation-delay: 0.15s;
+  -webkit-animation-delay: 0.0s;
+          animation-delay: 0.0s;
   z-index: 20;
 
   &__inner-wrap {
     @include container;
     @include clearfix;
     padding: 1em 1em 1em;
-    font-family: $sans-serif-narrow;
+    font-family: $sans-serif;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
@@ -43,11 +43,19 @@
 
 .masthead__menu-item {
   display: block;
+  font-size: $type-size-6;
   list-style-type: none;
   white-space: nowrap;
 
+  &--lgl {
+    display: inline;
+    font-size: $type-size-5;
+    font-weight: 300;
+  }
+
   &--lg {
     padding-right: 2em;
+    font-size: $type-size-1;
     font-weight: 700;
   }
 }
