--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-$doc-font-size              : 16 !default;
+$doc-font-size              : 12 !default;
 
 /* paragraph indention */
 $paragraph-indent           : false !default; // true, false (default)
@@ -14,19 +14,19 @@ $indent-var                 : 1.3em !default;
 
 /* system typefaces */
 $serif                      : Georgia, Times, serif !default;
-$sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
+$sans-serif                 : "Open Sans", sans-serif !default;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace !default;
 
 /* sans serif typefaces */
 $sans-serif-narrow          : $sans-serif !default;
-$helvetica                  : Helvetica, "Helvetica Neue", Arial, sans-serif !default;
+/*$helvetica                  : Helvetica, "Helvetica Neue", Arial, sans-serif !default;*/
 
 /* serif typefaces */
-$georgia                    : Georgia, serif !default;
+/*$georgia                    : Georgia, serif !default;
 $times                      : Times, serif !default;
 $bodoni                     : "Bodoni MT", serif !default;
 $calisto                    : "Calisto MT", serif !default;
-$garamond                   : Garamond, serif !default;
+$garamond                   : Garamond, serif !default;*/
 
 $global-font-family         : $sans-serif !default;
 $header-font-family         : $sans-serif !default;
