--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -322,7 +322,7 @@
     display: none;
   }
 
-  @include breakpoint(max-width ($small - 1px)) {
+  @include breakpoint(max-width (0px)) {
 
     label {
       position: relative;
