[STARTED] project layout

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,7 +13,7 @@ $paragraph-indent           : false !default; // true, false (default)
 $indent-var                 : 1.3em !default;
 
 /* system typefaces */
-$serif                      : Georgia, Times, serif !default;
+$serif                      : "Gentium Book Basic", serif !default;
 $sans-serif                 : "Open Sans", sans-serif !default;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace !default;
 
