--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,5 +3,6 @@
 <!-- insert favicons. use http://realfavicongenerator.net/ -->
 
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,400i" rel="stylesheet">
 
 <!-- end custom head snippets -->
