--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -18,18 +18,17 @@ layout: default
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
-    {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-    {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-    {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
-    {% if page.modified %}<meta itemprop="dateModified" content="{{ page.modified | date: "%B %d, %Y" }}">{% endif %}
 
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
           {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i>{{ page.date | date: " %Y.%m.%d" }}</p>
+          {% if page.language %}<p class="page__meta">{{ page.year }}, {{ page.language }}</p>
+          {% else %}
+          {% if page.date %}<p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i>{{ page.date | date: " %Y.%m.%d" }}</p>{% endif %}
           {% if page.read_time %}
             <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
+          {% endif %}
           {% endif %}
         </header>
       {% endunless %}
