--- a/_layouts/office.html
+++ b/_layouts/office.html
@@ -26,7 +26,7 @@
 
         <div class="page__inner-wrap" style="text-align:center">
 
-            {% assign temp = '[<i class="fa fa-twitter"></i> @officemahyem](https://twitter.com/officemayhem){: .btn .btn--x-large .btn--twitter} [<i class="fa fa-envelope-o"></i> Email](mailto:officemayhemgame@gmail.com?Subject=Hello!){: .btn .btn--x-large}' %}
+            {% assign temp = '[<i class="fa fa-twitter"></i> @officemayhem](https://twitter.com/officemayhem){: .btn .btn--x-large .btn--twitter} [<i class="fa fa-envelope-o"></i> Email](mailto:officemayhemgame@gmail.com?Subject=Hello!){: .btn .btn--x-large}' %}
 
 
           <div class="feature__wrapper">
