[FIXED] https links?

--- a/_layouts/office.html
+++ b/_layouts/office.html
@@ -59,19 +59,19 @@
               <a href="http://tyskwo.com" class="btn btn--light-outline btn--large btn--block">Richard King
               <p class="no_margin">Audio Designer</p></a>
 
-              <a href="https://www.linkedin.com/in/benjaminlander/" class="btn btn--light-outline btn--large btn--block">Ben Lander
+              <a href="http://www.linkedin.com/in/benjaminlander/" class="btn btn--light-outline btn--large btn--block">Ben Lander
               <p class="no_margin">Producer</p></a>
 
               <a href="http://tonyl.info" class="btn btn--light-outline btn--large btn--block">Tony Libardi
               <p class="no_margin">Systems Programmer</p></a>
 
-              <a href="https://www.linkedin.com/in/andrew-messier-1656a6a6" class="btn btn--light-outline btn--large btn--block">Andrew Messier
+              <a href="http://www.linkedin.com/in/andrew-messier-1656a6a6" class="btn btn--light-outline btn--large btn--block">Andrew Messier
               <p class="no_margin">Animator</p></a>
 
               <a href="http://andrewmillsap.weebly.com" class="btn btn--light-outline btn--large btn--block">Andrew Millsap
               <p class="no_margin">Programmer</p></a>
 
-              <a href="https://npaquette.artstation.com/" class="btn btn--light-outline btn--large btn--block">Norman Paquette
+              <a href="http://npaquette.artstation.com/" class="btn btn--light-outline btn--large btn--block">Norman Paquette
               <p class="no_margin">Character Artist</p></a>
 
               <a href="http://jeremynroot.com" class="btn btn--light-outline btn--large btn--block">Jeremy Root
