[ADDED] blog post.

--- a/_layouts/office.html
+++ b/_layouts/office.html
@@ -56,7 +56,7 @@
               <a href="http://tim-healey.com" class="btn btn--light-outline btn--large btn--block">Tim Healey
               <p class="no_margin">Level Designer</p></a>
 
-              <a href="http://tyskwo.com" class="btn btn--light-outline btn--large btn--block">Richard King
+              <a href="http://www.richardkingdesign.com" class="btn btn--light-outline btn--large btn--block">Richard King
               <p class="no_margin">Audio Designer</p></a>
 
               <a href="http://www.linkedin.com/in/benjaminlander/" class="btn btn--light-outline btn--large btn--block">Ben Lander
