--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -192,7 +192,8 @@
 
   button {
     position: absolute;
-    height: 100%;
+    height: 60%;
+    top: 20%;
     right: 0;
     padding: 0 0.5rem;
     border: 0;
