[EDITED] titles on office mayhem page.

--- a/_layouts/office.html
+++ b/_layouts/office.html
@@ -53,7 +53,7 @@
 
 
               <a href="http://willconcannonart.com" class="btn btn--light-outline btn--large btn--block">Will Concannon
-              <p class="no_margin">Lead Artist</p></a>
+              <p class="no_margin">Environment Artist</p></a>
 
               <a href="http://tim-healey.com" class="btn btn--light-outline btn--large btn--block">Tim Healey
               <p class="no_margin">Level Designer</p></a>
@@ -71,7 +71,7 @@
               <p class="no_margin">Animator</p></a>
 
               <a href="http://andrewmillsap.weebly.com" class="btn btn--light-outline btn--large btn--block">Andrew Millsap
-              <p class="no_margin">Programmer</p></a>
+              <p class="no_margin">Animation Programmer</p></a>
 
               <a href="http://npaquette.artstation.com/" class="btn btn--light-outline btn--large btn--block">Norman Paquette
               <p class="no_margin">Character Artist</p></a>
@@ -80,7 +80,7 @@
               <p class="no_margin">Systems Designer</p></a>
 
               <a href="http://tyskwo.com" class="btn btn--light-outline btn--large btn--block">Ty Wood
-              <p class="no_margin">Lead Programmer</p></a>
+              <p class="no_margin">Gameplay Programmer</p></a>
           </section>
 
         </div>
